# MiniMax-Coding-Plan-MCP

./: .env.example  README-CN.md  README.md  pyproject.toml
minimax_mcp/: const.py  server.py
tests/: test_server_config.py
