[project]
name = "minimax-coding-plan-mcp"
version = "0.0.4"
description = "Specialized MiniMax Model Context Protocol (MCP) server designed for coding-plan users"
authors = [
    { name = "Roy Wu", email = "zhengyu@minimax.chat" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "minimax",
    "mcp",
    "minimax_web_search",
    "minimax_understand_image",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
minimax-coding-plan-mcp = "minimax_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
    "ruff>=0.3.0",
    "fastmcp>=0.4.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "twine>=6.1.0",
    "build>=1.0.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=minimax_mcp --cov-report=term-missing"
